@startuml

class IPhone {
    - modelo: String
    - capacidadeArmazenamento: int
    - cor: String
    - ligado: boolean
    
    + IPhone(modelo: String, capacidadeArmazenamento: int, cor: String)
    + ligar(): void
    + desligar(): void
    + tocar(): void
    + pausar(): void
    + selecionarMusica(musica: String): void
    + ligar(numero: String): void
    + atender(): void
    + iniciarCorreioVoz(): void
    + exibirPagina(url: String): void
    + adicionarNovaAba(url: String): void
    + atualizarPagina(): void
}

interface ReprodutorMusical {
    + tocar(): void
    + pausar(): void
    + selecionarMusica(musica: String): void
}

interface AparelhoTelefonico {
    + ligar(numero: String): void
    + atender(): void
    + iniciarCorreioVoz(): void
}

interface NavegadorInternet {
    + exibirPagina(url: String): void
    + adicionarNovaAba(url: String): void
    + atualizarPagina(): void
}

IPhone --|> ReprodutorMusical
IPhone --|> AparelhoTelefonico
IPhone --|> NavegadorInternet

@enduml
